# preload-rs

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPING.md  GUIDE.md  README.md  devbox.json
.github/workflows/: ci.yml  docs.yml
.sqlx/: query-103a4ddc7beb64fd8dfc3ae39b7491ad13d3bc795dd510a851273721f290e47b.json  query-1f65e0547bf987915f5448b278d3ec9059cf80b8ccf86f41865e020933c7b8a3.json  query-29075064af8a9503788714300059b6ac6521de80d1cafd750e4c6f237ed4add5.json  query-3553d6199e4db50ece674dd231ff195744cd66cd2a73ca3fce7cda31e32f5911.json  query-375e2dac8e7c9248624aa0aa8af3ad8d7c5e443052b8363dfa1159c1bea73515.json  query-379e6aebaac4cd9167af2ee3fc073c1512565a1a5654c4e2f83088495cd28c16.json  query-497eec23eee4144a8d85a00d534603a030ff88e10b1847aff58898e9dcec2c6c.json  query-6c8576a05b8c19eab262367a97fae7961ecd72ff9b5dd477b9f5fe62d6a1706b.json  query-9cf1c6e0a911daab3cfcf3a104c5e2858117a7169e197086c97ae936f65d6149.json  query-a4ed7e8d602c178d34fb7a01ea67a66259a0889536d487e94dce8669c7c027cb.json  query-bc258032f2419e7b594df12fb107efa31dfccd69ccc173bc222e25fe80e9ff82.json  query-d77202ca70eed238d1e899ea8c6d894427f0412a14ed3be58fc90c7e455dbeef.json  query-dcdfab28d2d751e89811974be8351b04e246f136e49ffbedf8a4d17dc3608f6b.json  query-dd39e3ac4c6238df0b34059ec61545d93da99c2e56839bafe02808137f2d7780.json  query-e97b3218df92154bc053f2b49be9f7e3731fff74fa647b52b233f964728ab498.json  query-fee4ab65b5bd3b196841d1982a72eee2b897e847ee553ff558428ec4d66be138.json
crates/cli/: Cargo.toml
crates/cli/proptest-regressions/: cli.txt
crates/cli/src/: cli.rs  error.rs  lib.rs  main.rs  signals.rs
crates/cli/tests/: signals.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  memory_policy.rs  model.rs  persistence.rs  sort_strategy.rs  system.rs
crates/db/: Cargo.toml
crates/kernel/: Cargo.toml
crates/kernel/migrations/: 20241008140047_init.sql
crates/kernel/proptest-regressions/exe/: mod.txt
crates/kernel/proptest-regressions/map/: mod.txt
crates/kernel/src/: database.rs  error.rs  exemap.rs  lib.rs  memstat.rs  state.rs  utils.rs
crates/kernel/src/exe/: database.rs  inner.rs  mod.rs
crates/kernel/src/exemap/: database.rs  mod.rs
crates/kernel/src/map/: database.rs  inner.rs  mod.rs
crates/kernel/src/markov/: database.rs  inner.rs  markov_state.rs  mod.rs
crates/kernel/src/state/: database.rs  inner.rs  mod.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/migrations/: 20260131000000_init.sql
crates/orchestrator/src/: clock.rs  engine.rs  error.rs  lib.rs
crates/orchestrator/src/domain/: exe.rs  ids.rs  map_segment.rs  markov.rs  memstat.rs  mod.rs
crates/orchestrator/src/observation/: admission.rs  event.rs  mod.rs  model_updater.rs  procfs_scanner.rs
crates/orchestrator/src/persistence/: mod.rs  repo.rs  snapshot.rs
crates/orchestrator/src/prediction/: mod.rs  predictor.rs  types.rs
crates/orchestrator/src/prefetch/: mod.rs  plan.rs  planner.rs  prefetcher.rs
crates/orchestrator/src/stores/: active_set.rs  edge_key.rs  exe_map_index.rs  exe_store.rs  map_store.rs  markov_graph.rs  mod.rs
crates/orchestrator/tests/: engine_pipeline.rs  model_updater.rs  predictor.rs  prefetch_planner.rs  procfs_integration.rs  snapshot.rs
docs/: ADR.md  config.example.toml
