[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/config",
    "crates/orchestrator",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
proptest = "1.6.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7.13"
async-trait = "0.1.85"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_with = "3.12.0"
toml_edit = { version = "0.22.23", features = ["serde"] }
slotmap = "1.0.7"
procfs = "0.16.0"
nix = { version = "0.28.0", features = ["fs"] }
sqlx = { version = "0.7.4", features = ["macros", "runtime-tokio", "sqlite"] }
rkyv = { version = "0.7.44", features = ["validation"] }
clap = { version = "4.5.27", features = ["derive"] }
tempfile = "3.10.1"
libc = "0.2.153"

[profile.release]
lto = true
codegen-units = 1
strip = true
# https://smallcultfollowing.com/babysteps/blog/2024/05/02/unwind-considered-harmful/
panic = "abort"

[profile.test.package.proptest]
opt-level = 3

[workspace.lints.clippy]
print_stderr = "warn"
print_stdout = "warn"
