[package]
name = "preload-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = "4.5.17"
clap-verbosity-flag = "2.2.1"
config = { version = "0.1.0", path = "../config" }
db = { version = "0.1.0", path = "../db" }
kernel = { version = "0.1.0", path = "../kernel" }
thiserror.workspace = true
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
proptest = "1.5.0"
