[package]
name = "preload-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# inter-crate
config = { version = "0.1.0", path = "../config" }
db = { version = "0.1.0", path = "../db" }
kernel = { version = "0.1.0", path = "../kernel" }
# workspace dependencies
thiserror.workspace = true
tracing.workspace = true
flume.workspace = true
# additional dependencies
anyhow = "1.0.89"
clap = "4.5.18"
clap-verbosity-flag = "2.2.1"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing-subscriber = "0.3.18"
tracing-log = "0.2.0"

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
