[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
config = { path = "../config" }
orchestrator = { path = "../orchestrator" }

[dev-dependencies]
proptest.workspace = true
