[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.1.0", path = "../config" }
libc = "0.2.158"
procfs = "0.16.0"
sysinfo = "0.31.4"
thiserror.workspace = true
tokio = { version = "1.40.0", features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
