[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.1.0", path = "../config" }
educe = { version = "0.6.0", default-features = false, features = ["Eq", "PartialEq", "Ord", "PartialOrd", "Hash"] }
libc = "0.2.159"
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
procfs = "0.16.0"
sysinfo = "0.31.4"
thiserror.workspace = true
tokio = { version = "1.40.0", features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
rand = "0.8.5"

[lints]
workspace = true
